--- a/src/components/pages/IosDev.css
+++ b/src/components/pages/IosDev.css
@@ -18,11 +18,10 @@
   flex-direction: column;
   padding: 30px;
   padding-bottom: 24px;
-  width: 380px;
+  width: 300px;
 }
 
 .title {
-  font-family: "SF Pro-Bold", Helvetica;
   font-weight: 700;
   white-space: nowrap;
 }
@@ -33,9 +32,14 @@
   font-weight: 400;
   text-align: center;
   white-space: pre-wrap;
-  font-size: 20px;
+  font-size: 18px;
   padding-top: 12px;
   padding-bottom: 12px;
+}
+
+#description-main-technologies {
+  font-family: "SF Pro-Regular", Helvetica;
+  font-style: italic;
 }
 
 .header {
@@ -51,7 +55,6 @@
 .description {
   color: #000000;
   font-family: "SF Pro-Regular", Helvetica;
-  font-weight: 400;
   white-space: pre-wrap;
   padding: 12px;
   padding-top: 24px;
@@ -59,7 +62,7 @@
 
 .gif {
   object-fit: cover;
-  height: 650px;
-  border-radius: 45px;
+  height: 500px;
+  border-radius: 35px;
   box-shadow: 5px 5px 10px gray;
 }
