--- a/src/components/pages/Marathon.css
+++ b/src/components/pages/Marathon.css
@@ -1,3 +1,8 @@
+#marathon-container > h1 {
+  font-weight: 700;
+  white-space: pre-wrap;
+}
+
 .img-container {
   display: flex;
   flex-wrap: wrap;
